# IB-2021-22-Practices

./: README.md
Practice_10/: README.md
Practice_10/src/: .gitignore
Practice_11_A/: README.md
Practice_11_A/02-rectángulo/: CMakeLists.txt
Practice_11_A/05-circulo/: CMakeLists.txt
Practice_11_A/07-calcula/: CMakeLists.txt
Practice_11_A/07-calcula/src/: TablasDeMultiplicar.txt  calcula.cc  calcula.h  calcula_main.cc
Practice_11_B/: README.md
Practice_11_B/complejo/: CMakeLists.txt
Practice_11_B/computeint/: CMakeLists.txt
Practice_11_B/fecha/: CMakeLists.txt
Practice_11_B/vector3D/: CMakeLists.txt
Practice_12/: README.md
Practice_12/complex-numbers/: complex_numbers.cpp  complex_numbers.h  complex_numbers_test.cpp
Practice_12/racional/: CMakeLists.txt
Practice_12/robot-simulator/: robot_simulator.cpp  robot_simulator.h  robot_simulator_test.cpp
Practice_2/: ProgrammingJoke.txt  aula.txt  history-home.txt  square  square_numbres.cc
Practice_4/ej-01-coste-carretera/: ej-01-coste-carretera  ej-01-coste-carretera.cc
Practice_4/ej-02-yenes-euros/: ej-02-yenes-euros  ej-02-yenes-euros.cc
Practice_4/ej-03-recuento/: ej-03-recuento  ej-03-recuento.cc
Practice_4/ej-04-media-alumnos/: ej-04-media-alumnos  ej-04-media-alumnos.cc
Practice_4/ej-05-area-perimetro/: ej-05-area-perimetro  ej-05-area-perimetro.cc
Practice_4/ej-06-distancia-puntos/: ej-06-distancia-puntos  ej-06-distancia-puntos.cc
Practice_4/ejercicio1-cilindro/: ejercicio1-cilindro  ejercicio1-cilindro.cc
Practice_4/ejercicio2-ASCII/: ejercicio2-ASCII  ejercicio2-ASCII.cc
Practice_4/ejercicios-varios/: calculadora  calculadora.cc  cruz  (+11 more)
Practice_5/: Makefile
Practice_9/: README.md
(+302 files in other folders)
